<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcosrosada.mycontacts.FormularioActivity$PlaceholderFragment" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
          <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lbNome" />
         
         <EditText 
             android:id="@+id/txtNome"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:hint="@string/hintNome"/>

         <EditText
             android:id="@+id/txtFone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone" 
             android:hint="@string/hintfone">
         </EditText>

        <Button 
             android:id="@+id/btnSalvar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/btnSalvar"/>
    </LinearLayout>
   

</ScrollView>
